# cxx_concepts

./: .gitignore  CMakeLists.txt  README.md  TODO.md  test_concepts.cpp
include/: concepts
